<resources>
    <string name="app_name">Action Soccer Manager</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="welcome_text">Welcome to Action Soccer Manager</string>
    <string name="creategame">CREATE GAME</string>
    <string name="DISPLAY_LEADERBOARD">DISPLAY LEADERBOARD</string>
    <string name="create_new_account">Create New Account</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="Team">Enter Your Team</string>
    <string name="Add1">Player 1</string>
    <string name="Add2">Player 2</string>
    <string name="Add3">Player 3</string>
    <string name="Add4">Player 4</string>
    <string name="Add5">Player 5</string>
    <string name="submit">SUBMIT</string>








</resources>