<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/pitch_2"
    tools:context=".registration_activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/addyourTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_people"
            android:drawablePadding="12dp"
            android:hint="@string/Team"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHighlight="#F5EBEB"
            android:textColorLink="#F8F7F7" />

        <EditText
            android:id="@+id/enterPlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_people"
            android:drawablePadding="12dp"
            android:hint="@string/Add1"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHighlight="#F5EBEB"
            android:textColorLink="#F8F7F7" />

        <EditText
            android:id="@+id/enterPlayer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_people"
            android:drawablePadding="12dp"
            android:hint="@string/Add2"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHighlight="#F5EBEB"
            android:textColorLink="#F8F7F7" />

        <EditText
            android:id="@+id/enterPlayer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_people"
            android:drawablePadding="12dp"
            android:hint="@string/Add3"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHighlight="#F5EBEB"
            android:textColorLink="#F8F7F7" />

        <EditText
            android:id="@+id/enterPlayer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_people"
            android:drawablePadding="12dp"
            android:hint="@string/Add4"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHighlight="#F5EBEB"
            android:textColorLink="#F8F7F7" />

        <EditText
            android:id="@+id/enterPlayer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_people"
            android:drawablePadding="12dp"
            android:hint="@string/Add5"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHighlight="#F5EBEB"
            android:textColorLink="#F8F7F7" />

        <Button
            android:id="@+id/submit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="#009688"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</RelativeLayout>