<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pitch_2"
    tools:context=".registration_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:textAllCaps="true"
            android:textColor="#8BC34A"
            android:textSize="20dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/f_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/custom_person_icon"
            android:drawableLeft="@drawable/custom_person_icon"
            android:drawablePadding="12dp"
            android:hint="First Name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/L_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_person_icon"
            android:drawableLeft="@drawable/custom_person_icon"
            android:drawablePadding="12dp"
            android:hint="@string/prompt_lastname"
            android:inputType="textPersonName"
            android:padding="10dp" />


        <EditText
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHighlight="#F5EBEB"
            android:textColorLink="#F8F7F7" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:padding="10dp" />


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="#009688"
            android:text="@string/action_sign_up"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </LinearLayout>


</RelativeLayout>